# rust-error-info

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  test.rest
error-code/: Cargo.toml
error-code-derive/: Cargo.toml
error-code-derive/src/: error_info.rs  lib.rs
error-code-macros/: Cargo.toml
error-code/examples/: web.rs
error-code/src/: lib.rs
