[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
error-code-derive = { workspace = true }

[dev-dependencies]
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = { workspace = true }
